--- a/cgolad/src/templates/gameview.html
+++ b/cgolad/src/templates/gameview.html
@@ -8,6 +8,7 @@
     <body>
         <div id='grid-container'></div>
         <button id='next-player'>Next Player</button>
+        <button id='next-generation'>Next Generation</button>
     </body>
     <script type='module' src="{{url_for('static', filename='basicgame.js')}}"></script>
 </html>
