--- a/cgolad/src/static/gameviewstyle.css
+++ b/cgolad/src/static/gameviewstyle.css
@@ -16,7 +16,12 @@ html, body {
 }
 
 .cell {
+    background-color: white;
     border: 1px solid #000000;
+}
+
+.cell:hover {
+    filter: brightness(0.8)
 }
 
 .next-player {
