frontend is prettier now

--- a/cgolad/src/templates/gameview.html
+++ b/cgolad/src/templates/gameview.html
@@ -6,6 +6,8 @@
         <title>Conway's Game of Life and Death</title>
     </head>
     <body>
+        <h1>Conway's Game of Life and Death</h1>
+        <p>A classic zero player simulation now adapted to incorporate a multiplayer aspect.</p>
         <div>
             <button id='next-player'>Next Player</button>
             <button id='next-generation'>Next Generation</button>
