--- a/cgolad/src/static/gameviewstyle.css
+++ b/cgolad/src/static/gameviewstyle.css
@@ -1,14 +1,36 @@
 html, body {
     height: 100%;
-    width: 100%
+    width: 100%;
+    font-family: "Lucida Console", Monospace;
+    text-align: center;
+    color: #011627;
+    background-color: #FDFFFC;
 }
 
+button {
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+button:focus {
+    outline: none;
+}
+
+#next-generation {
+    background-color: #FF9F1C;
+}
+
+#title {
+    text-align: center;
+}
 
 #grid-container {
     position: relative;
     display: grid;
     align: center;
-    top: 10%;
+    top: 2%;
     margin: auto;
     width: 75vmin;
     height: 75vmin;
