--- a/cgolad/src/templates/gameview.html
+++ b/cgolad/src/templates/gameview.html
@@ -14,6 +14,7 @@
         </div>
         <div id='grid-container'></div>
     </body>
-    <script src="{{url_for('static', filename='setup.js')}}"></script>
+    <script type='module' src="{{url_for('static', filename='setup.js')}}"></script>
+    <script type='module' src="{{url_for('static', filename='gamestate.js')}}"></script>
     <script type='module' src="{{url_for('static', filename='basicgame.js')}}"></script>
 </html>
