--- a/cgolad/src/templates/gameview.html
+++ b/cgolad/src/templates/gameview.html
@@ -15,6 +15,5 @@
         <div id='grid-container'></div>
     </body>
     <script type='module' src="{{url_for('static', filename='setup.js')}}"></script>
-    <script type='module' src="{{url_for('static', filename='gamestate.js')}}"></script>
-    <script type='module' src="{{url_for('static', filename='basicgame.js')}}"></script>
+    <script type='module' src="{{url_for('static', filename='startup.js')}}"></script>
 </html>
