--- a/cgolad/src/templates/stage_two.html
+++ b/cgolad/src/templates/stage_two.html
@@ -8,9 +8,8 @@
     <body>
         <h1>Conway's Game of Life and Death</h1>
         <p>A classic zero player simulation now adapted to incorporate a multiplayer aspect.</p>
-        <div>
-            <button id='next-player'>Next Player</button>
-            <button id='next-generation'>Next Generation</button>
+        <div id="stage-two">
+            <p>This is stage two.</p>
         </div>
         <div id='grid-container'></div>
     </body>
