--- a/cgolad/src/templates/stage_one.html
+++ b/cgolad/src/templates/stage_one.html
@@ -14,6 +14,5 @@
         </div>
         <div id='grid-container'></div>
     </body>
-    <script type='module' src="{{url_for('static', filename='setup.js')}}"></script>
-    <script type='module' src="{{url_for('static', filename='startup.js')}}"></script>
+    <script type='module' src="{{url_for('static', filename='stage_one_startup.js')}}"></script>
 </html>
