--- a/cgolad/src/templates/stage_two.html
+++ b/cgolad/src/templates/stage_two.html
@@ -13,6 +13,5 @@
         </div>
         <div id='grid-container'></div>
     </body>
-    <script type='module' src="{{url_for('static', filename='setup.js')}}"></script>
-    <script type='module' src="{{url_for('static', filename='startup.js')}}"></script>
+    <script type='module' src="{{url_for('static', filename='stage_two_startup.js')}}"></script>
 </html>
