--- a/cgolad/src/templates/stage_two.html
+++ b/cgolad/src/templates/stage_two.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="{{url_for('static', filename='gameviewstyle.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='stage_two.css')}}">
         <title>Conway's Game of Life and Death</title>
     </head>
     <body>
