--- a/cgolad/src/templates/stage_two.html
+++ b/cgolad/src/templates/stage_two.html
@@ -9,7 +9,7 @@
         <h1>Conway's Game of Life and Death</h1>
         <p>A classic zero player simulation now adapted to incorporate a multiplayer aspect.</p>
         <div id="stage-two">
-            <p>This is stage two.</p>
+            <p id="indicator"></p>
         </div>
         <div id='grid-container'></div>
     </body>
